--- a/style.css
+++ b/style.css
@@ -1,78 +1,71 @@
-/* Add CSS styles here */
+* {
+  box-sizing: border-box;
+}
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
-    margin: 0;
+  font-family: Arial, sans-serif;
+  background-color: #f0f0f0;
+  margin: 0;
+  box-shadow: 0 0 12px -2px black;
+  padding: 0;
+  max-width: 1000px;
+  margin: 0 auto;
 }
 
 header {
-    text-align: center;
-    background-color: #333;
-    color: #fff;
-    padding: 20px;
+  text-align: center;
+  background-color: #333;
+  color: #fff;
+  padding: 20px;
 }
 
 nav {
-    background-color: #444;
+  background-color: #444;
 }
 
 nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
 
 nav li {
-    display: inline;
-    margin-right: 20px;
+  display: inline;
+  margin-right: 20px;
 }
 
 a {
-    text-decoration: none;
-    color: #fff;
+  text-decoration: none;
+  color: #fff;
 }
 
 section {
-    padding: 20px;
+  padding: 10px;
+  text-align: center;
 }
 
 footer {
-    text-align: center;
+  text-align: center;
+  padding: 10px;
+  background-color: #444;
+  color: #fff;
+}
+main .quote {
+  font-family: "Georgia", cursive;
+  font-size: 20px;
+  font-weight: 50;
+  text-shadow: 1px 1px 2px black;
+  text-align: center;
+  margin-top: 5em;
+}
+.home {
     padding: 10px;
-    background-color: #444;
-    color: #fff;
-}
-
-* {
-    box-sizing: border-box;
-}
-
-.row {
-    margin-left: -5px;
-    margin-right: -5px;
-}
-
-.column {
-    float: left;
-    width: 33%;
-    padding: 5px;
-}
-
-/* Clearfix (clear floats) */
-.row::after {
-    content: "";
-    clear: both;
-    display: table;
-}
-
-table {
-    border-collapse: collapse;
-    border-spacing: 0;
-    width: 100%;
-    border: 1px solid #ddd;
-}
-
-th,
-td {
     text-align: left;
-}
+  }
+  .project {
+    width: calc(100% - 6em);
+    background: #fafafa;
+    color: #222;
+    box-shadow: 0 3px 6px -2px #ccc;
+    margin: 2em auto;
+    padding: 1em;
+  }
