--- a/style.css
+++ b/style.css
@@ -4,11 +4,12 @@
 body {
   font-family: Arial, sans-serif;
   background-color: #f0f0f0;
-  margin: 0;
   box-shadow: 0 0 12px -2px black;
   padding: 0;
   max-width: 1000px;
   margin: 0 auto;
+  display: grid;
+  place-content: center;
 }
 
 header {
@@ -61,7 +62,7 @@ main .quote {
     padding: 10px;
     text-align: left;
   }
-  .project {
+.project {
     width: calc(100% - 6em);
     background: #fafafa;
     color: #222;
@@ -69,3 +70,12 @@ main .quote {
     margin: 2em auto;
     padding: 1em;
   }
+#parent {
+    display: table;
+    width: 100%;
+ }
+ #contact-form {
+    display: table-cell;
+    text-align: center;
+    vertical-align: middle;
+ }
