--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@ body {
   padding: 0;
   max-width: 1000px;
   margin: 0 auto;
-  display: grid;
   place-content: center;
 }
 
@@ -17,6 +16,20 @@ header {
   background-color: #333;
   color: #fff;
   padding: 20px;
+}
+
+main {
+  display: flex;
+  justify-content: space-between;
+  margin: 20px;
+}
+
+
+footer {
+  text-align: center;
+  padding: 10px;
+  background-color: #444;
+  color: #fff;
 }
 
 nav {
@@ -44,12 +57,10 @@ section {
   text-align: center;
 }
 
-footer {
-  text-align: center;
-  padding: 10px;
-  background-color: #444;
-  color: #fff;
+.link {
+  color:blue;
 }
+
 main .quote {
   font-family: "Georgia", cursive;
   font-size: 20px;
@@ -58,24 +69,82 @@ main .quote {
   text-align: center;
   margin-top: 5em;
 }
+
+.about {
+  background-color: #f5f5f5;
+  padding: 20px;
+  transition: background-color 0.3s;
+  box-shadow: 0 3px 6px -2px #ccc; 
+  border: 1px solid #ccc;
+  margin: 20px;
+  text-align: center;
+}
+.aboutmain {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px;
+  padding: 20px;
+  
+}
+
 .home {
-    padding: 10px;
-    text-align: left;
-  }
+  padding: 10px;
+  text-align: left;
+}
 .project {
-    width: calc(100% - 6em);
-    background: #fafafa;
-    color: #222;
-    box-shadow: 0 3px 6px -2px #ccc;
-    margin: 2em auto;
-    padding: 1em;
-  }
-#parent {
-    display: table;
-    width: 100%;
- }
- #contact-form {
-    display: table-cell;
-    text-align: center;
-    vertical-align: middle;
- }
+  width: calc(100% - 6em);
+  background: #fafafa;
+  color: #222;
+  box-shadow: 0 3px 6px -2px #ccc;
+  margin: 2em auto;
+  padding: 1em;
+}
+.contact-form {
+  background-color: #f5f5f5;
+  padding: 20px;
+  border: 1px solid #ccc;
+  margin: 20px;
+  text-align: center;
+}
+
+.contact-form label {
+  display: block;
+  margin: 10px 0;
+}
+
+.contact-form input, textarea {
+  width: 70%;
+  padding: 10px;
+  margin: 5px 0;
+}
+
+.contact-form input[type="submit"] {
+  background-color: #333;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+}
+
+.contact-form input[type="submit"]:hover {
+  background-color: #555;
+}
+
+.message {
+  text-align: center;
+  margin: 20% auto;
+  max-width: 400px;
+  padding: 20px;
+  border: 1px solid #ccc;
+  background-color: #f5f5f5;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.message h1 {
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+
+.message p {
+  font-size: 16px;
+  line-height: 1.5;
+}
